#2329 [Fixed] Anchor: Icon no wrap

--- a/packages/dso-toolkit/src/components/highlight-box/highlight-box.scss
+++ b/packages/dso-toolkit/src/components/highlight-box/highlight-box.scss
@@ -30,15 +30,11 @@
         }
 
         &.download {
-          &::after {
-            @include di.base("download-zwart");
-          }
+          @include di.variant("download-zwart");
         }
 
         &.extern {
-          &::after {
-            @include di.base("external-link-zwart");
-          }
+          @include di.variant("external-link-zwart");
         }
       }
     }
@@ -70,15 +66,11 @@ dso-highlight-box {
         }
 
         &.download {
-          &::after {
-            @include di.base("download-zwart");
-          }
+          @include di.variant("download-zwart");
         }
 
         &.extern {
-          &::after {
-            @include di.base("external-link-zwart");
-          }
+          @include di.variant("external-link-zwart");
         }
       }
     }
